src/objects/Case_Snapshot__c.object
<CustomObject>
    <description>Populated by the Apex Class - TRC Dashboard Data
https://na28.salesforce.com/01pC0000000R5QD</description>
    <fields>
        <fullName>Closed_Cases__c</fullName>
        <label>Closed Cases</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Created_Cases__c</fullName>
        <label>Created Cases</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Open_Cases__c</fullName>
        <label>Open Cases</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Reopened_Cases__c</fullName>
        <inlineHelpText>Cases that are Re-Opened</inlineHelpText>
        <label>Reopened Cases</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SnapShot_Date__c</fullName>
        <label>SnapShot Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TRC_Group__c</fullName>
        <description>It is a Group on a case.</description>
        <label>Group</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>TRC</fullName>
                </value>
                <value>
                    <fullName>TRC - AAH</fullName>
                </value>
                <value>
                    <fullName>TRC - Chillers</fullName>
                </value>
                <value>
                    <fullName>TRC - ATS</fullName>
                </value>
                <value>
                    <fullName>TRC - Controls</fullName>
                </value>
                <value>
                    <fullName>Rep Help Desk</fullName>
                </value>
                <value>
                    <fullName>Salesforce Help</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Case_Snapshots</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Case Snapshot</label>
    <listViews>
        <fullName>All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>SnapShot_Date__c</columns>
        <columns>Closed_Cases__c</columns>
        <columns>Created_Cases__c</columns>
        <columns>Open_Cases__c</columns>
        <columns>TRC_Group__c</columns>
        <columns>User__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>CS - {000000}</displayFormat>
        <label>Case Snapshot Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case Snapshots</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>